# ffxiv-simple-battle-tracker

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: test.yml
src/: __init__.py  gui_launcher.py  main.py
src/data/: __init__.py  ability_cache.json  mitigation_db.py  xivapi_cache.py
src/models/: __init__.py  data_models.py
src/parser/: __init__.py  damage_calc.py  line_handlers.py  log_parser.py  mitigation_calc.py
src/watcher/: __init__.py  file_watcher.py
src/web/: server.py
static/css/: styles.css
static/js/: dashboard.js
templates/: index.html
tests/: conftest.py  test_damage_calc.py  test_line_handlers.py  test_log_parser.py
