[project]
name = "ffxiv-battle-tracker"
version = "0.1.0"
description = "Parse and analyze FFXIV raid combat logs from ACT"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"

dependencies = [
    "flask>=2.0",
]

[project.scripts]
ffxiv-tracker = "src.main:main"

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "pre-commit>=4.0",
    "pytest>=8.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
